--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+i<!DOCTYPE html>
 <html>
 <head>
 	<title>My app</title>
@@ -6,6 +6,7 @@
 <body>
 	This is my apps!!
 	Login Form
+	Edit
 
 </body>
 </html>>
