remove add edited line'

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-i<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<title>My app</title>
@@ -6,8 +6,6 @@ i<!DOCTYPE html>
 <body>
 	This is my apps!!
 	Login Form
-	Edit
-	edit2
 
 </body>
 </html>>
