--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	Added a new line
 	Login Form
 	This is added remote repo line
-	This the added second line remote repo line
+	This the added second line remote repo line --added at remote
 
 </body>
 </html>>modify index.html
